Add button to trigger functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,11 +31,11 @@ find_package(catkin REQUIRED roscpp rospy std_msgs message_generation)
 
 add_service_files(
   FILES
-  add/addCheckBox.srv
+  add/addButton.srv
   add/addComboBox.srv
   add/addRadioButton.srv
   add/addSlider.srv
-  update/updateCheckBox.srv
+  update/updateButton.srv
   update/updateComboBox.srv
   update/updateRadioButton.srv
   update/updateSlider.srv
