--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,6 @@ set(CMAKE_PREFIX_PATH $ENV{CMAKE_PREFIX_PATH})
 string(REPLACE ":" ";" CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH})
 list(APPEND CMAKE_PREFIX_PATH ${QT_PATH})
 
-find_package(Qt5UiTools ${MINIMUM_QT_VERSION} REQUIRED)
-find_package(Qt5Widgets ${MINIMUM_QT_VERSION} REQUIRED)
 find_package(Qt5Widgets ${MINIMUM_QT_VERSION} REQUIRED)
 find_package(Qwt ${MINIMUM_QT_VERSION} REQUIRED)
 find_package(catkin REQUIRED roscpp rospy std_msgs message_generation)
@@ -57,30 +55,41 @@ include_directories(
     ${QWT_INCLUDE_DIRS}
 )
 
+## Compile qt_utils lib
+include(src/qt_utils/qt_utils.cmake)
+
 ## Compile console lib
 add_library(console src/console/console_core.cpp src/console/console.cpp)
 target_link_libraries(console readline pthread)
 
-include(src/qt_utils/qt_utils.cmake)
+## Compile the server node
+add_executable(server_node include/support/server.h include/rt_gui/rt_gui_server.h src/server.cpp)
+target_link_libraries(server_node PRIVATE qt_utils ${catkin_LIBRARIES})
 
 install(DIRECTORY include/${PROJECT_NAME}/
         DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
 
-## Compile test
-add_executable(test_qt test/test_qt.cpp)
-target_link_libraries(test_qt PRIVATE qt_utils)
-
-add_executable(test_server include/support/server.h include/rt_gui/rt_gui_server.h test/test_server.cpp)
-target_link_libraries(test_server PRIVATE qt_utils ${catkin_LIBRARIES})
-
-add_executable(test_client include/rt_gui/rt_gui_client.h test/test_client.cpp)
-target_link_libraries(test_client PRIVATE qt_utils ${catkin_LIBRARIES})
-
-add_executable(test_console test/test_console.cpp)
-target_link_libraries(test_console PRIVATE console)
-
-install(TARGETS test_qt test_server test_client
+install(TARGETS server_node
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+
+install(DIRECTORY launch/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
+  PATTERN ".svn" EXCLUDE)
+
+## Compile test
+if (CATKIN_ENABLE_TESTING)
+    add_executable(test_qt test/test_qt.cpp)
+    target_link_libraries(test_qt PRIVATE qt_utils)
+
+    add_executable(test_server include/support/server.h include/rt_gui/rt_gui_server.h test/test_server.cpp)
+    target_link_libraries(test_server PRIVATE qt_utils ${catkin_LIBRARIES})
+
+    add_executable(test_client include/rt_gui/rt_gui_client.h test/test_client.cpp)
+    target_link_libraries(test_client PRIVATE qt_utils ${catkin_LIBRARIES})
+
+    add_executable(test_console test/test_console.cpp)
+    target_link_libraries(test_console PRIVATE console)
+endif()
