--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,8 +81,11 @@ install(DIRECTORY launch/
 
 ## Compile test
 if (CATKIN_ENABLE_TESTING)
-    add_executable(test_qt test/test_qt.cpp)
-    target_link_libraries(test_qt PRIVATE qt_utils)
+    add_executable(test_window test/test_window.cpp)
+    target_link_libraries(test_window PRIVATE qt_utils)
+
+    add_executable(test_groups test/test_groups.cpp)
+    target_link_libraries(test_groups PRIVATE qt_utils)
 
     add_executable(test_server include/support/server.h include/rt_gui/rt_gui_server.h test/test_server.cpp)
     target_link_libraries(test_server PRIVATE qt_utils ${catkin_LIBRARIES})
