--- a/rt_gui_core/package.xml
+++ b/rt_gui_core/package.xml
@@ -9,14 +9,13 @@
 
   <license>Apache-2.0</license>
 
-  <buildtool_depend>cmake</buildtool_depend>
+  <buildtool_depend condition="$ament_cmake_FOUND == true">ament_cmake</buildtool_depend>
+  <buildtool_depend condition="$catkin_FOUND == true">catkin</buildtool_depend>
+  <member_of_group condition="$ament_cmake_FOUND == true">rosidl_interface_packages</member_of_group>
 
   <depend>readline</depend>
   <depend>pthread</depend>
   <depend>Qt5Widgets</depend>
   <depend>Qwt</depend>
 
-  <export>
-    <build_type>cmake</build_type>
-  </export>
 </package>
